--- a/src/UbuntuTouch/README
+++ b/src/UbuntuTouch/README
@@ -5,8 +5,8 @@ Change into the source directory
 $ mkdir build; cd build
 $ cmake .. -DUBUNTUTOUCH=1
 $ make
-$ cp -rp ../src/UbuntuTouch/qml ../src/UbuntuTouch/emailclient.qml .
-$ ./trojita-tp
+$ cd ../src/UbuntuTouch
+$ ../../build/trojita-tp
 
-The cp step is currently needed for trajita-tp to load the qml files, there 
-aren't install targets setup for it in cmake yet.
+trojita-tp needs to be run from the src/UbuntuTouch directory to load the 
+qml files, there aren't install targets setup for it in cmake yet.
